WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264046
Work around thread-safety analysis regression in clang
https://bugs.webkit.org/show_bug.cgi?id=264046
Summary
Work around thread-safety analysis regression in clang
Chris Dumez
Reported
2023-11-01 10:46:33 PDT
Work around thread-safety analysis regression in clang.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-01 10:46:51 PDT
<
rdar://problem/117804778
>
Chris Dumez
Comment 2
2023-11-01 10:48:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19844
EWS
Comment 3
2023-11-01 12:46:38 PDT
Committed
270073@main
(6c4ddc3a4d8a): <
https://commits.webkit.org/270073@main
> Reviewed commits have been landed. Closing PR #19844 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug