Work around thread-safety analysis regression in clang https://bugs.webkit.org/show_bug.cgi?id=264046 rdar://117804778

Reviewed by Keith Miller.

Silence the warning to keep WebKit building with newer clang versions :(

* Source/JavaScriptCore/heap/MarkedBlock.cpp:
(JSC::MarkedBlock::aboutToMarkSlow):

Canonical link: https://commits.webkit.org/270073@main